# storage

./: .gitignore  .travis.yml  App.toml.sample  Cargo.toml  Last.toml  Makefile  README.md  deploy.init.sh  skaffold.yaml  sync.sh  werf.yaml
.github/workflows/: build-dev-artifacts.yml  build-release-artifacts.yml  check.yml  ci.yml  converge.yml  converge_test.yml  deploy-via-flux.yml  deploy.yml  docs.yml  mdbook.yml  release.yml  tests.yml
.helm/: secret-values.yaml  values.yaml
.helm/templates/: 05-secrets.yaml  09-app-cm.yaml  10-app.yaml  30-app-pdb.yaml  90-ingress.yaml  _env.tpl  _probes.tpl  _volumes.tpl
chart/: Chart.yaml  sample.yaml  values.yaml
chart/templates/: _helpers.tpl  app-cm.yaml  deploy.yaml  pdb.yaml
chart/templates/network/: cluster-svc.yaml  ing.yaml  legacy-ing.yaml
chart/templates/restarter/: cronjob.yaml  rbac.yaml
data/keys/: iam.private_key.p8.der.sample  iam.public_key.p8.der.sample
deploy/: docs.sh  run.sh
docker/: Dockerfile
docs/src/: SUMMARY.md  api.md  api.object.md  api.set.md  api.set.read.md  api.sign.md  api.tag.delete.md  api.tag.list.md  api.tag.read.md  api.tag.update.md  authn.md  authz.md  backend.md  backend.s3.md  datatype.bucket.md  datatype.set.md  datatype.tag.md  overview.md
docs/src/data/: storage-tags-query.1.xml  storage-tags-query.2.xml
k8s/: storage-config.yaml  storage-environment.yaml  storage-ingress.yaml  storage-service.yaml  storage.yaml
migrations/2019-07-27-030449_create_bucket/: down.sql  up.sql
migrations/2019-07-27-030655_create_set/: down.sql  up.sql
migrations/2019-07-27-030800_create_set_tag/: down.sql  up.sql
migrations/2019-07-28-230442_create_tag_list/: down.sql  up.sql
src/: authz.rs  db.rs  main.rs  s3.rs  schema.rs  serde.rs  tracing.rs
src/app/: access_token.rs  authn.rs  authz.rs  config.rs  context.rs  error.rs  extractor.rs  http.rs  maxmind.rs  mod copy.rs  mod.rs  util.rs
src/app/config/: mod.rs  parse.rs
src/app/endpoints/: common.rs  mod.rs  set.rs  setstate.rs  sign.rs  signstate.rs
src/authn/: jose.rs  mod.rs
src/authn/jose/: extract.rs  mod.rs  token.rs
src/db/: mod.rs  tag.rs
src/http/: mod.rs  object.rs  set.rs
src/tool/: mod.rs  s3.rs
