[package]
name = "storage"
version = "0.8.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

[dependencies]
axum = { version = "0.6", features = ["headers", "tokio"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
tokio = { version = "1.28" }
anyhow = "1.0"
tracing = "0.1"
env_logger = "0.10"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
radix_trie = "0.2"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
openssl = "*"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "r2d2"] }
http = "0.2"
url = "2.3"
svc-authn = { version = "0.8", features = ["jose"] }
svc-authz = "0.12"
svc-utils = { version = "0.7.4", features = ["authn-extractor", "log-middleware"] }
svc-agent = { version = "0.20" }
svc-error = { version = "0.5" }
