[package]
name = "storage"
version = "0.8.1"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["headers"] }
axum-client-ip = "0.4"
config = "0.13"
env_logger = "0.10"
http = "0.2"
maxminddb = "0.23"
radix_trie = "0.2"
rusoto_core = "0.48"
rusoto_s3 = "0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svc-authn = { version = "0.8", features = ["jose"] }
svc-authz = "0.12"
svc-error = { version = "0.6", features = ["svc-authn", "svc-authz"] }
svc-utils = { version = "0.8", features = ["authn-extractor", "log-middleware"] }
tokio = "1.28"
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing = "0.1"
url = "2.4"
